@@ -1,5 +1,11 @@
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.233 2005/04/21 14:40:43 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.234 2005/04/21 14:45:09 rocket Exp $
+
+  21 Apr 2005; Eric Edgar <rocket@gentoo.org> catalyst,
+  modules/catalyst_support.py, modules/generic_stage_target.py,
+  modules/livecd_stage1_target.py:
+  only append livecd-tools to the livecd-stage1 target package list and move a
+  check out of the way so command line and spec files can co-exist
 
   21 Apr 2005; Eric Edgar <rocket@gentoo.org>
   modules/generic_stage_target.py:
